--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
-
+##Server Port
+server.port=8080
+##Spring DATASOURCE (DataSourceAutoConfiguration & DataSource Properties)
+spring.datasource.url=jdbc:mysql://localhost:3306/spring_auth
+spring.datasource.username=root
+spring.datasource.password=
+##Hibernate Properties
+#The SQL dialect makes Hibernate generate better SQL for the choosen Database
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+#Hibernate ddl auto (create, create-drop, validate, update)
+spring.jpa.hibernate.ddl-auto=update
+#setup Hybernate log
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type=TRACE
